--- a/site/index.html
+++ b/site/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE HTML>
 <html>
-	<body>
-		<p>CAVABUUNGA</p>
-	</body>
+<head>
+ <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>Поиск похожих композиций</title>
+</head>
+<body>
+	<h3> В 1 поле введите имя исполнителя, а во второе -- название трека </h3>
+	<form action="/cgi-bin/form.py">
+		<input type="text" name="TEXT_1">
+		<input type="text" name="TEXT_2">
+		<input type="submit">
+	</form>
+</body>
 </html>
