--- a/site/index.html
+++ b/site/index.html
@@ -11,5 +11,6 @@
 		<input type="text" name="TEXT_2">
 		<input type="submit">
 	</form>
+	<h3> Пример ввода: 1ое поле - muse, 2ое поле - new lands </h3>
 </body>
 </html>
