--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
 <title>Поиск похожих композиций</title>
 </head>
 <body>
-	<h3> В 1 поле введите имя исполнителя, а во второе -- название трека </h3>
+	<h3> В 1 поле введите имя исполнителя,  во второе -- название трека </h3>
 	<form action="/cgi-bin/form.py">
 		<input type="text" name="TEXT_1">
 		<input type="text" name="TEXT_2">
